-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2, 10.3, 10.1.41, 10.4
-
Component/s: Storage Engine - InnoDB
-
Labels:
Reduce memory usage during the recovery page.
1) innodb_gis.rtree_recovery,4k test case - Fails with the following error
[Warning] InnoDB: Difficult to find free blocks in the buffer pool (21 search iterations)! 21 failed attempts to flush a page! Consider increasing innodb_buffer_pool_size. Pending flushes (fsync) log: 0; buffer pool: 0. 577 OS file reads, 1 OS file writes, 1 OS fsyncs.
|
Buffer ran out of memory during recovery. Remove recv_n_pool_free_frames hack
2) MDEV-12699 introduces mlog_reset. Basically, it stores all init records of the page, mlog_index_load of all page and their respective LSN.
It is done to avoid I/O of mlog_init_ record pages during recovery.
Remove mlog_reset and store this information as a part of recv_addr.
- blocks
-
MDEV-21351 Replace recv_sys.heap with list of buf_block_t*
-
- Closed
-
- causes
-
MDEV-21826 Recovery failure : loop of Read redo log up to LSN
-
- Closed
-
- is duplicated by
-
MDEV-20679 Mariabackup --prepare runs out of buffer_pool when --use-memory is not default
-
- Closed
-
- relates to
-
MDEV-22512 innodb_zip.recover, innodb_gis.types failed in buildbot with server failing to restart
-
- Stalled
-
-
MDEV-12700 Allow innodb_read_only startup without prior slow shutdown
-
- Stalled
-
-
MDEV-14425 Change the InnoDB redo log format to reduce write amplification
-
- Stalled
-